--- a/container_env_files/cfg.env
+++ b/container_env_files/cfg.env
@@ -39,6 +39,6 @@ FORCE_SCRIPT_NAME=/cfg/
 CGW_URL=http://nginx:8000/cgw
 CGW_AUTH_TOKEN=your_privileged_endpoints_token
 
-CSRF_TRUSTED_ORIGINS="http://localhost:8000"
+CSRF_TRUSTED_ORIGINS="http://localhost:8000,http://18.140.90.74:8000"
 
 MEDIA_URL = "http://localhost:8000/cfg/media/"
