--- a/container_env_files/txs.env
+++ b/container_env_files/txs.env
@@ -8,7 +8,7 @@ REDIS_URL=redis://txs-redis:6379/0
 CELERY_BROKER_URL=amqp://guest:guest@txs-rabbitmq/
 DJANGO_ALLOWED_HOSTS="*"
 FORCE_SCRIPT_NAME=/txs/
-CSRF_TRUSTED_ORIGINS="http://localhost:8000"
+CSRF_TRUSTED_ORIGINS="http://localhost:8000,http://18.140.90.74:8000"
 EVENTS_QUEUE_URL=amqp://general-rabbitmq:5672
 EVENTS_QUEUE_ASYNC_CONNECTION=True
 EVENTS_QUEUE_EXCHANGE_NAME="safe-transaction-service-events"
